--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="nav_feedback">Feedback</string>
     <string name="nav_help">Help &amp; Support</string>
     <string name="nav_sign">Sign In</string>
+    <string name="most_used">Most Used</string>
+    <string name="recharge">Recharge</string>
+    <string name="travel">Travel</string>
 </resources>
