changing for first submission with dummy data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="search">Search</string>
     <string name="categories">Categories</string>
     <string name="profile">Profile</string>
+    <string name="transaction">Transaction</string>
     <string name="nav_grab">Grab of The day</string>
     <string name="nav_coupon">Coupon Finder</string>
     <string name="nav_brands">Brands</string>
