--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,6 @@
     <!-- Strings related to barcode scanner -->
     <string name="ok">OK</string>
     <string name="permission_camera_rationale">Access to the camera is needed for detection. Please allow camera permission from settings.</string>
-    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
+    <string name="no_camera_permission">Scanning cannot be completed without camera permission</string>
     <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
 </resources>
