--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="hint_phone_no">Phone Number</string>
     <string name="hint_password">Password</string>
     <string name="hint_name">Fullname</string>
-    <string name="btn_login">LOGIN</string>
+    <string name="btn_login">Send Code</string>
     <string name="btn_verify">VERIFY</string>
     <string name="btn_resend">RESEND</string>
     <string name="send_code">Send Code</string>
