User registration initiating

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,8 +49,9 @@
     <string name="hint_name">Fullname</string>
     <string name="btn_login">Send Code</string>
     <string name="btn_verify">VERIFY</string>
-    <string name="btn_resend">RESEND</string>
-    <string name="send_code">Send Code</string>
+    <string name="text_resend">Resend Code</string>
+    <string name="text_send_code">Send Code</string>
+    <string name="text_next">Next</string>
     <string name="btn_link_to_register">Not a member? Get registered!</string>
     <string name="btn_link_to_login">Already registered? Login!</string>
     <string name="title_activity_reset_password">ResetPasswordActivity</string>
