Category is now dynamic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,8 @@
     <string name="scan_barcode_button">Scan barcode</string>
     <string name="no_barcode_captured">No barcode captured</string>
     <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
+    <string name="change_phone_number">Looking to change phone number?</string>
+    <string name="permission_storage">You need storage permission</string>
 
     <!-- Strings related to barcode scanner -->
     <string name="ok">OK</string>
