--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="permission_camera_rationale">Access to the camera is needed for detection. Please allow camera permission from settings.</string>
     <string name="no_camera_permission">Scanning cannot be completed without camera permission</string>
     <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
+    <string name="view_all">View All</string>
 </resources>
