--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="no_barcode_captured">No barcode captured</string>
     <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
     <string name="change_phone_number">Looking to change phone number?</string>
-    <string name="permission_storage">You need storage permission</string>
+    <string name="permission_storage">You need storage and camera permission</string>
     <string name="error_login">Cannot login at this moment</string>
 
     <!-- Strings related to barcode scanner -->
