--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,8 @@
     <string name="FACEBOOK_APP_ID">696380264038189</string>
     <string name="ACCOUNT_KIT_CLIENT_TOKEN">f8a02238eede52fac438978a4d2aa843</string>
 
+    <string name="check_in_time">12PM</string>
+    <string name="check_out_time">11AM</string>
+    <string name="check_in_person_count">1 Adult</string>
+
 </resources>
