--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,5 +102,5 @@
     <string name="check_in_time">12PM</string>
     <string name="check_out_time">11AM</string>
     <string name="check_in_person_count">1 Adult</string>
-
+    <string name="number_prompt">We need your number to communicate\nwith you. Please login with your\nphone number</string>
 </resources>
