--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="check_in_person_count">1 Adult</string>
     <string name="number_prompt">We need your number to communicate\nwith you. Please login with your\nphone number</string>
     <string name="popular_text">Popular!</string>
+    <string name="offer_text">Deals for you</string>
 </resources>
