--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="number_prompt">We need your number to communicate\nwith you. Please login with your\nphone number</string>
     <string name="popular_text">Popular!</string>
     <string name="offer_text">Deals for you</string>
+    <string name="upcoming_exam_text">Upcoming exams</string>
 </resources>
