--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,7 +103,7 @@
     <string name="check_out_time">11AM</string>
     <string name="check_in_person_count">1 Adult</string>
     <string name="number_prompt">We need your number to communicate\nwith you. Please login with your\nphone number</string>
-    <string name="popular_text">Popular!</string>
-    <string name="offer_text">Deals for you</string>
+    <string name="popular_text">Popular places to stay!</string>
+    <string name="offer_text">Offers for you</string>
     <string name="upcoming_exam_text">Upcoming exams</string>
 </resources>
