--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,15 @@
     <string name="openDrawer">open_drawer</string>
     <string name="closeDrawer">close_drawer</string>
 
-    <string name="nav_home">Home</string>
+    <string-array name="nav_item_activity_titles">
+        <item>Notifications</item>
+        <item>Settings</item>
+        <item>Help</item>
+        <item>About</item>
+    </string-array>
+
+    <string name="nav_about">About</string>
+    <string name="nav_notification">Notifications</string>
     <string name="nav_saved">Saved</string>
     <string name="nav_booking">Bookings</string>
     <string name="nav_profile">Profile</string>
@@ -18,7 +26,6 @@
     <string name="nav_coupon">Coupon Finder</string>
     <string name="nav_brands">Brands</string>
     <string name="nav_bank">Bank Offers</string>
-    <string name="nav_notification">Notifications</string>
     <string name="nav_settings">Settings</string>
     <string name="nav_share">Share The App</string>
     <string name="nav_feedback">Feedback</string>
