--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
         <item>About</item>
     </string-array>
 
+    <string name="congratulation_text">Congratulations!</string>
     <string name="nav_about">About</string>
     <string name="nav_notification">Notifications</string>
     <string name="nav_saved">Saved</string>
@@ -113,6 +114,7 @@
     <string name="check_out_time">11AM</string>
     <string name="check_in_person_count">1 Adult</string>
     <string name="number_prompt">We need your number to communicate\nwith you. Please login with your\nphone number</string>
+    <string name="confirm_order_text">To confirm your order\nplease contact with property owner</string>
     <string name="popular_text">Popular places to stay!</string>
     <string name="offer_text">Offers for you</string>
     <string name="upcoming_exam_text">Upcoming exams</string>
