--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
         <item>About</item>
     </string-array>
 
+    <string name="user_name_text">Anonymous</string>
     <string name="congratulation_text">Congratulations!</string>
     <string name="nav_about">About</string>
     <string name="nav_notification">Notifications</string>
