--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="nav_coupon">Coupon Finder</string>
     <string name="nav_brands">Brands</string>
     <string name="nav_bank">Bank Offers</string>
+    <string name="nav_home">Home</string>
     <string name="nav_settings">Settings</string>
     <string name="nav_share">Share The App</string>
     <string name="nav_feedback">Feedback</string>
